# game24-grpo

./: .gitignore  README.md  pyproject.toml  requirements-autodl.txt  requirements.txt
configs/: base.yaml  rtx4090_grpo.json  t4_grpo.json
data/: sample.jsonl
doc/: .gitignore  选题三 基于强化学习的24点游戏求解.docx
examples/data_preprocess/: game24.py
game24/: __init__.py  data.py  evaluation.py  grpo_rewards.py  inference.py  model_tot.py  parser.py  prompts.py  rewards.py  schemas.py  sft.py  solver.py  splits.py  tot.py  tot_policy.py  trajectory.py  verifier.py
game24_grpo.egg-info/: PKG-INFO  SOURCES.txt
scripts/: a800_restart_train.sh  accuracy_first_4090.sh  autodl_overnight_4090.sh  check_autodl_env.py  check_training_env.py  continue2_then_tot_policy.sh  direct_answer_4090.sh  download_data.py  download_model.py  evaluate_baseline.py  evaluate_game24.py  evaluate_model_tot.py  evaluate_strategy_suite.sh  evaluate_tot.py  evaluate_verified_decoding.py  infer_once.py  merge_adapter.py  plot_game24_metrics.py  plot_results.py  prepare_countdown_data.py  prepare_data.py  prepare_experiment_data.py  prepare_train_data.py  run_a800_tmux.sh  run_continue2_then_tot_policy_tmux.sh  run_direct_answer_tmux.sh  run_overnight_tmux.sh  run_tot_policy_tmux.sh  setup_a800_conda_env.sh  setup_autodl_vllm_env.sh  smoke_test.py  smoke_vllm_game24.py  summarize_experiments.py  tot_policy_4090.sh  train_countdown_then_game24_grpo.sh  train_game24_grpo.sh  train_game24_grpo_vllm_autodl.sh  train_grpo.py  train_sft_warmup.py  train_tot_policy_sft.py
tests/: __init__.py  test_game24_reward.py  test_parser.py  test_pipeline.py  test_rewards.py  test_solver.py  test_verifier.py
verl/trainer/: main_ppo.py
verl/trainer/ppo/: ray_trainer.py
verl/utils/dataset/: rl_dataset.py
verl/utils/reward_score/: game24.py
verl/workers/: fsdp_workers.py
verl/workers/actor/: dp_actor.py
verl/workers/critic/: dp_critic.py
verl/workers/rollout/: hf_rollout.py
