[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game24-grpo"
version = "0.1.0"
description = "GRPO training for Qwen2.5-1.5B-Instruct to solve the Game of 24 puzzle"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
inference = [
    "transformers==4.39.3",
]
data = [
    "datasets>=2.18",
]

[tool.setuptools.packages.find]
include = ["game24*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
